--- a/HomePage.html
+++ b/HomePage.html
@@ -32,7 +32,7 @@
 </div>
 
 <div id="pic1">
-    <img src="../htmlpic1.jpg" width=400px height=220px></div>
+    <img src="./htmlpic1.jpg" width=400px height=220px></div>
     <div id="third">
     <h2>Professional Summary</h2>
 
