--- a/HomePage.html
+++ b/HomePage.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="#personal">Personal Summary</a></li>
         <li><a href="#hobby">Hobbies</a></li>
-        <li><a href="#interest">Interests</a></li>
+        <li><a href="#interest">Technical Interests</a></li>
         <li><a href="#professional">Professional Summary</a></li>
         <li><a href="#con">Contact</a></li>
         <li><a href="./Login Page.html">Logout</a></li>
@@ -37,7 +37,7 @@
 </div>
 <span>
     <a name="interest"></a>
-<p id="interests">INTERESTS</p>
+<p id="interests">Technical Interests</p>
 <div id="pic1">
     <img src="./javaimg.jpg" width=180px height=150px id="prof1">
     <img src="./dsaimg - Copy.jpeg" width=180px height=150px id="prof2">
